--- a/client/index.html
+++ b/client/index.html
@@ -6,40 +6,117 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tinder | Programming 2: Front-End Advanced | Associate Degree in Computer Programming</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
     <link rel="stylesheet" href="./static/css/main.css" crossorigin="anonymous" />
 </head>
 
 <body>
-    <div class="tinder-grid">
+    <header>
+        <div class="header__brand">
+            <h1>Amor</h1>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000">
+                <path d="M868.27 108.9c-26.31 13.16-82.23 56.74-88.4 68.87-4.73 9.04-6.99 29.81-8.43 74.21L770 292.27l18.29 3.49c34.54 6.17 59.41 9.46 74.01 9.46 13.77 0 16.04-.62 38.03-11.92 54.07-27.34 97.03-62.7 88.6-72.98-3.08-3.7-17.06-6.58-55.3-11.72-31.86-4.32-41.53-6.58-44.2-10.9-3.29-5.35-3.7-24.46-1.03-52.83 2.88-31.66 2.06-41.73-2.88-42.76-1.63-.2-9.44 2.68-17.25 6.79z"/>
+                <path d="M607.19 204.7c-7.81 1.03-23.23 4.93-34.12 8.84-35.77 12.13-65.78 32.07-98.88 65.78l-20.15 20.35-8.84-8.22c-20.35-18.71-51.6-39.68-77.5-51.8-57.35-26.72-117.18-28.78-167.95-5.35-52.22 24.05-91.27 72.36-106.69 131.57-6.58 25.49-7.4 62.49-2.06 88.4 9.46 44.81 30.84 94.15 58.59 135.88 22.82 34.33 39.68 54.68 75.24 91.07 37.62 38.44 70.1 67.02 142.05 124.99 56.12 45.02 75.24 61.26 94.97 80.79l11.1 10.9 24.87-24.67c13.77-13.57 44.61-42.76 68.25-64.76 89.01-82.64 140.82-140.82 183.78-205.98 31.45-47.9 57.97-101.55 67.02-136.09 9.66-36.39 9.25-81.41-1.23-114.92-4.52-14.6-12.75-23.64-25.49-27.75-16.04-5.35-21.59-2.88-73.18 31.45-62.5 41.52-126.23 79.55-133.42 79.55-7.61 0-16.45-7.4-16.45-13.57 0-8.84 3.5-12.54 33.51-35.15 72.36-54.48 128.69-99.7 133.21-106.69 9.25-15.01 4.11-39.88-10.48-50.16-26.11-18.71-78.32-29.6-116.15-24.46zM89.56 650.59C59.54 683.89 10 796.13 10 830.88c0 13.98 4.52 15.83 41.94 16.65 74.62 1.85 171.65-17.47 177.2-35.36 2.47-7.4-9.25-14.18-43.79-25.9-17.47-5.96-32.27-12.13-32.89-13.57-1.64-4.32 1.85-7.61 28.16-25.49 28.57-19.32 32.89-24.05 32.89-35.77 0-9.05-7.4-27.14-13.16-31.86-4.93-4.11-9.46-1.65-44.82 24.87-16.65 12.33-31.25 22-32.27 21.17-3.5-2.06-5.76-14.59-8.43-42.76-3.89-45.22-8.42-50.98-25.27-32.27z"/>
+              </svg>
+        </div>
+    </header>
+    <main class="cupid-grid">
+        <div class="userList">
+            <h2>Users</h2>
+            <ul class="userList__list">
+                <li class="userList__list__item">
+                    <a href="">
+                        <img src="https://randomuser.me/api/portraits/thumb/women/68.jpg" alt="">
+                        <span>Abigail Anderson</span>
+                    </a>
+                </li>
+                <li class="userList__list__item">
+                    <a href="" class="selected">
+                        <img src="https://randomuser.me/api/portraits/thumb/women/68.jpg" alt="">
+                        <span>Abigail Anderson</span>
+                    </a>
+                </li>
+                <li class="userList__list__item">
+                    <a href="">
+                        <img src="https://randomuser.me/api/portraits/thumb/women/68.jpg" alt="">
+                        <span>Abigail Anderson</span>
+                    </a>
+                </li>
+                <li class="userList__list__item">
+                    <a href="">
+                        <img src="https://randomuser.me/api/portraits/thumb/women/68.jpg" alt="">
+                        <span>Abigail Anderson</span>
+                    </a>
+                </li>
+                <li class="userList__list__item">
+                    <a href="">
+                        <img src="https://randomuser.me/api/portraits/thumb/women/68.jpg" alt="">
+                        <span>Abigail Anderson</span>
+                    </a>
+                </li>
+                <li class="userList__list__item">
+                    <a href="">
+                        <img src="https://randomuser.me/api/portraits/thumb/women/68.jpg" alt="">
+                        <span>Abigail Anderson</span>
+                    </a>
+                </li>
+                
 
+            </ul>
+        </div>
+
+
+        <div class="header">
+            <h2>Users</h2>
+            <h2>Messages</h2>
+            <h2>Conversation</h2>
+            <h2>Match Maker</h2>
+        </div>
         <div class="users">
             <h1>users</h1>
             <ul class="users__list"></ul>
         </div>
         <div class="inbox">
-            <h1>inbox</h1>
+            <h1>inbox</h1><span class="inbox__amount"></span>
             <ul class="inbox__list"></ul>
             <!-- <ul class="messages__list__send"></ul> -->
         </div>
         <div class="outbox">
-            <h1>outbox</h1>
+            <h1>outbox</h1><span class="outbox__amount"></span>
             <!-- <ul class="messages__list__received"></ul> -->
             <ul class="outbox__list"></ul>
         </div>
         <div class="conversations">
-            <h1>Conversations</h1>
-            <ul class="conversations__list"></ul>
+            <div class="conversations__conversation">
+                    <h1>Conversations</h1><span class="conversation__friendImage"></span>
+                    <ul class="conversations__list"></ul>
+            </div>
+
+            <div class="messageArea">
+                <h1>Message</h1>
+                <form id="messenger" method="post" action="">
+                    <label for="messenger__text">Bericht:</label>
+                    <textarea name="messenger__text" id="messenger__text" cols="10" rows="10" placeholder="typ jouw bericht"></textarea>
+                    <button>SEND</button>
+                </form>
+            </div>
         </div>
-        <div class="messageArea">
-            <h1>Message</h1>
-            <form id="messenger" method="post" action="">
-                <label for="messenger__text">Bericht:</label>
-                <textarea name="messenger__text" id="messenger__text" cols="10" rows="10" placeholder="typ jouw bericht"></textarea>
-                <button>SEND</button>
-            </form>
+        
+        <div class="matches--new">
+            <h1>Unanswered Matches</h1>
+            <ul class="matches--new__list">
+
+            </ul>
         </div>
-    </div>
+        <div class="matches--responded">
+            <h1>Responded Matches</h1>
+            <ul class="matches--responded__list">
+
+            </ul>
+        </div>
+    </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous"></script>
     <script src="./static/js/services.js"></script>
     <script src="./static/js/main.js"></script>
